# divine-blossom

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config-store-data.json  fastly.toml  fastly.toml.docker  fastly.toml.example  fastly.toml.local
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  semantic_pr.yml
cloud-functions/process-blob/: Dockerfile  main.py  test_process_blob.py
cloud-run-asr-parakeet/: .dockerignore  Dockerfile  README.md  deploy.sh  requirements.txt
cloud-run-asr-parakeet/app/: main.py  transcribe.py
cloud-run-asr-parakeet/tests/: test_transcribe_mapping.py
cloud-run-transcoder/: .dockerignore  Cargo.toml  backfill-vtt-direct.sh  backfill-vtt-force.sh  deploy.sh  repair-media-artifacts.sh  repair_recent_bad_vtts.py  scan_and_repair_vtts.py
cloud-run-transcoder/src/: main.rs  transcription_google_stt_v2.rs
cloud-run-transcoder/tests/: test_repair_recent_bad_vtts.py  test_video_readiness_probe.py
cloud-run-transcoder/tests/fixtures/: loop_hallucination_real_gemini.txt  loop_hallucination_with_preamble.txt  stt_v2_with_words.json
cloud-run-upload/: Cargo.toml  backfill-thumbnails.py  export-video-upload-hashes.py
cloud-run-upload/src/: main.rs  resumable.rs
docs/: README.md
docs/api/: creator-delete-contract.md
docs/runbooks/: cdn-view-counting.md
docs/superpowers/plans/: 2026-03-14-subtitle-transcription-reliability.md  2026-03-17-moderation-access-gap-fixes.md  2026-03-21-recent-bad-vtt-repair-script.md  2026-03-21-video-readiness-probe.md  2026-03-27-divine-resumable-upload-sessions-server.md  2026-03-28-bounded-derivative-failure-handling.md  2026-03-30-blossom-upload-debug-harness.md  2026-04-09-gemini-transcription.md  2026-04-10-blob-status-age-restricted.md  2026-04-16-creator-delete-action-plan.md  2026-04-16-media-age-auth-debug.md  2026-04-17-public-vtt-access.md  2026-04-26-creator-vtt-update.md
docs/superpowers/specs/: 2026-03-21-video-readiness-probe-design.md  2026-03-28-bounded-derivative-failure-handling-design.md  2026-04-05-720p-mp4-stuck-processing-investigation.md  2026-04-09-gemini-transcription-design.md  2026-04-16-creator-delete-action-design.md
scripts/: backfill-fmp4.sh  backfill-orientation.sh  backfill_missing_transcripts.sh  backfill_restricted_to_age_restricted.py  check_progressive_coverage.py  cleanup_orphan_kv.py  debug_upload_harness.py  probe_video_readiness.py
scripts/tests/: test_debug_upload_harness.py
scripts/tests/fixtures/: proofmode.json
src/: admin.rs  admin_sweep.rs  auth.rs  blossom.rs  delete_policy.rs  error.rs  lib.rs  main.rs  metadata.rs  req_id.rs  storage.rs  viewer_auth.rs
vcl/: log_cdn_views.vcl
