# ABOUTME: Cargo manifest for GPU video transcoding Cloud Run service
# ABOUTME: HLS multi-resolution encoding with NVIDIA NVENC

[package]
name = "divine-transcoder"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["http2"] }
tokio = { version = "1", features = ["full", "process"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.5"
hyper = { version = "1", features = ["http2", "server"] }
hyper-util = { version = "0.1", features = ["server", "http2", "tokio", "service"] }

# GCS - pinned to avoid edition2024 dependency issues
google-cloud-storage = "=0.17.0"
google-cloud-auth = "=0.12.0"

# Pin home crate to avoid edition2024
home = "=0.5.9"

# Pin to avoid edition2024 requirement
base64ct = "=1.6.0"
# Pin time crate to avoid edition2024
time = "=0.3.36"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encoding
hex = "0.4"

# Cryptography - SHA-256 hashing
sha2 = "0.10"

# Async utilities
futures = "0.3"
bytes = "1"

# Temp files for processing
tempfile = "3"

# HTTP client for webhook calls
reqwest = { version = "0.11", features = ["rustls-tls", "json", "multipart"], default-features = false }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
opt-level = 3
strip = true
